toc move of side missions

--- a/_posts/thesis_chapters/2025-3-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-3-6-Gdps.md
@@ -10,58 +10,69 @@ number-sections: true
 categories: chapter
 title:  6. The Use of Gameplay Design Patterns "It’s like a project in itself, really"
 ---
--   [Research Questions - March 2024](#research-questions---march-2024)
--   [Introduction](#introduction)
--   [The role of GDPs in the personal appropriation of concepts and
-    processes](#the-role-of-gdps-in-the-personal-appropriation-of-concepts-and-processes)
-    -   [The interrelationship of GDPs and the development of technical
-        processes](#the-interrelationship-of-gdps-and-the-development-of-technical-processes)
--   [GDPs used in the process of guided
-    participation](#gdps-used-in-the-process-of-guided-participation)
-    -   [Use of a menu of GDPs to assist project navigation and resource
-        organisation](#use-of-a-menu-of-gdps-to-assist-project-navigation-and-resource-organisation)
-    -   [GDPs used to scaffold ideation and prioritisation
-        processes](#gdps-used-to-scaffold-ideation-and-prioritisation-processes)
-    -   [GDPs aiding the process of division of labour
-        (1400)](#gdps-aiding-the-process-of-division-of-labour-1400)
--   [Use of GDPs in the cultural plane / community level of
-    activity](#use-of-gdps-in-the-cultural-plane-community-level-of-activity)
-    -   [The role of GDPs to facilitate learners to design for
-        others](#the-role-of-gdps-to-facilitate-learners-to-design-for-others)
-    -   [GDPs can facilitate the use of wider funds of knowledge and
-        interest](#gdps-can-facilitate-the-use-of-wider-funds-of-knowledge-and-interest)
-    -   [Evolution and propagation of GDPs concepts during
-        playtesting](#evolution-and-propagation-of-gdps-concepts-during-playtesting)
--   [Discussion](#discussion)
-    -   [Addressing the use of GDPs in relation to theoretical
-        understandings of processes of mediation and incorporation in
-        repertoires of
-        practice](#addressing-the-use-of-gdps-in-relation-to-theoretical-understandings-of-processes-of-mediation-and-incorporation-in-repertoires-of-practice)
-    -   [Observations on emerging design
-        practices](#observations-on-emerging-design-practices)
--   [Conclusion](#conclusion)
--   [MOVED FROM INTRODUCTION](#moved-from-introduction)
-    -   [MOVED FROM GUIDED
-        PARTICIPATION](#moved-from-guided-participation)
-    -   [Future work on abstraction, layers of abstraction GDPs and the
-        MDA
-        framework](#future-work-on-abstraction-layers-of-abstraction-gdps-and-the-mda-framework)
--   [MOVE FROM cH 7 - ANY SPACE HERE?](#move-from-ch-7---any-space-here)
--   [Impact of Side Missions and Maker Types on playtesting
-    behaviours](#impact-of-side-missions-and-maker-types-on-playtesting-behaviours)
-    -   [Reflection on impact on my design
-        process](#reflection-on-impact-on-my-design-process)
-    -   [Limitations of observations and careful statements of
-        potential](#limitations-of-observations-and-careful-statements-of-potential)
-    -   [Emerging use of narratives and graphics which drawing on home
-        funds of knowledge - AVOID OVERLAP AND CHANGE FOCUS TO AGENCY
-        FROM
-        START](#emerging-use-of-narratives-and-graphics-which-drawing-on-home-funds-of-knowledge---avoid-overlap-and-change-focus-to-agency-from-start)
-        -   [MOVE LATER/ JUST A SIGNPOST TO LATER - PARK, FOR
-            NOW?](#move-later-just-a-signpost-to-later---park-for-now)
-    -   [Implications for practitioners - MOVE
-        LATER?](#implications-for-practitioners---move-later)
-        -   [A thought on reflection](#a-thought-on-reflection)
+-   [The Use of Gameplay Design Patterns "It's like a project in itself,
+    really"](#the-use-of-gameplay-design-patterns-its-like-a-project-in-itself-really)
+    -   [Research Questions March 2025](#research-questions-march-2025)
+    -   [Research Questions - March
+        2024](#research-questions---march-2024)
+    -   [Introduction](#introduction)
+    -   [The role of GDPs in the personal appropriation of concepts and
+        processes](#the-role-of-gdps-in-the-personal-appropriation-of-concepts-and-processes)
+        -   [The interrelationship of GDPs and the development of
+            technical
+            processes](#the-interrelationship-of-gdps-and-the-development-of-technical-processes)
+    -   [GDPs used in the process of guided
+        participation](#gdps-used-in-the-process-of-guided-participation)
+        -   [Use of a menu of GDPs to assist project navigation and
+            resource
+            organisation](#use-of-a-menu-of-gdps-to-assist-project-navigation-and-resource-organisation)
+        -   [GDPs used to scaffold ideation and prioritisation
+            processes](#gdps-used-to-scaffold-ideation-and-prioritisation-processes)
+        -   [GDPs aiding the process of division of labour
+            (1400)](#gdps-aiding-the-process-of-division-of-labour-1400)
+        -   [Discussion of GP- Flexible Navigation/ not aligning with
+            design
+            cycles](#discussion-of-gp--flexible-navigation-not-aligning-with-design-cycles)
+    -   [Use of GDPs in the cultural plane / community level of
+        activity](#use-of-gdps-in-the-cultural-plane-community-level-of-activity)
+        -   [The role of GDPs to facilitate learners to design for
+            others](#the-role-of-gdps-to-facilitate-learners-to-design-for-others)
+        -   [GDPs can facilitate the use of wider funds of knowledge and
+            interest](#gdps-can-facilitate-the-use-of-wider-funds-of-knowledge-and-interest)
+        -   [Evolution and propagation of GDPs concepts during
+            playtesting](#evolution-and-propagation-of-gdps-concepts-during-playtesting)
+            -   [Emergent social and cultural activities in evolving
+                idioculture](#emergent-social-and-cultural-activities-in-evolving-idioculture)
+    -   [Discussion](#discussion)
+        -   [Addressing the use of GDPs in relation to theoretical
+            understandings of processes of mediation and expanded
+            objects of
+            activity](#addressing-the-use-of-gdps-in-relation-to-theoretical-understandings-of-processes-of-mediation-and-expanded-objects-of-activity)
+        -   [Expanded object in terms of motivation - fluency towards
+            agency](#expanded-object-in-terms-of-motivation---fluency-towards-agency)
+    -   [Conclusion](#conclusion)
+    -   [MOVED FROM INTRODUCTION](#moved-from-introduction)
+        -   [MOVED FROM GUIDED
+            PARTICIPATION](#moved-from-guided-participation)
+        -   [Future work on abstraction, layers of abstraction GDPs and
+            the MDA
+            framework](#future-work-on-abstraction-layers-of-abstraction-gdps-and-the-mda-framework)
+    -   [MOVE FROM cH 7 - ANY SPACE
+        HERE?](#move-from-ch-7---any-space-here)
+    -   [Impact of Side Missions and Maker Types on playtesting
+        behaviours](#impact-of-side-missions-and-maker-types-on-playtesting-behaviours)
+        -   [Reflection on impact on my design
+            process](#reflection-on-impact-on-my-design-process)
+        -   [Limitations of observations and careful statements of
+            potential](#limitations-of-observations-and-careful-statements-of-potential)
+        -   [Emerging use of narratives and graphics which drawing on
+            home funds of knowledge - AVOID OVERLAP AND CHANGE FOCUS TO
+            AGENCY FROM
+            START](#emerging-use-of-narratives-and-graphics-which-drawing-on-home-funds-of-knowledge---avoid-overlap-and-change-focus-to-agency-from-start)
+            -   [MOVE LATER/ JUST A SIGNPOST TO LATER - PARK, FOR
+                NOW?](#move-later-just-a-signpost-to-later---park-for-now)
+        -   [Implications for practitioners - MOVE
+            LATER?](#implications-for-practitioners---move-later)
 
 # The Use of Gameplay Design Patterns "It’s like a project in itself, really"
 
@@ -569,8 +580,7 @@ The examples explored above serve to highlight two dimensions of the use of GDP 
 
 ### GDPs can facilitate the use of wider funds of knowledge and interest
 
-
-<!-- [Be sure to explore context further and put in intro]. -->
+THIS NEEDS TO BE MUCH MORE GROUNDED IN DATA - MOVE THEORY OUT
 
 GDPs can allow participants to share and explore funds of knowledge and interest in the emerging learning community. One premise driving my exploration of the use of gameplay features in pedagogy is that the tacit knowledge of gaming conventions among most family members is extensive, even if they are not avid gamers, due to the extensive influence of video game culture in mainstream culture, including contexts of family life [@ito_hanging_2010; @livingstone_digital_2018], particularly retro gaming [@heineman2014public]. As such, the process of facilitating ways to surface and work with such tacit knowledge aligns with Moll's concept of funds of knowledge, and, potentially, funds of identity [@fasso_identity_2020; @esteban-guitart_funds_2014]. Within a CHAT framework, these funds of identity and knowledge can be seen as tools that facilitate the transfer of potentially useful concepts and practices across the boundaries between activity systems, in this case, between home activity and that happening in this game-making community. The associated inclusive benefits of working with participants' home interests are explored by Barron [@barron_conceptualizing_2010; @barron_interest_2006-1] and similar work by Gutiérrez on third spaces [@gutierrez_developing_2008]. Existing research outlines the motivations for social making incorporating gaming cultural elements [@ito_hanging_2010; @gee_what_2003] and the ability to make personalised game assets and narratives, which sustain engagement in digital making projects [@sefton-green_mapping_2013].
 
@@ -581,10 +591,6 @@ In addition to issues of aesthetics, home knowledge of game mechanics and dynami
 
 
 Thus observations from video data in this study support existing research which highlight the motivating potential of incorporating home interests in games, coding and media projects [@resnick_mothers_2012; @papert_mindstorms:_1980]. They also support findings of other research on the use of funds of knowledge and interest in digital projects as motivating factors and as a way to overcome barriers to alien cultures [@gutierrez_learning_2019-1; @moje2001maestro]. This research also aligns with PBL research that indicates that allowing participants to incorporate home interests can be highly motivating both in initial stages [@swirski_does_2018-1; @penuel_connecting_2022], and to sustain activity and overcome problems in order to share the personalised object created [@barron_interest_2006]. I also propose that this use of the MDA framework as a way of providing varied learning pathways has potential to aid facilitators to align with existing inclusive pedagogy, a point I explore in more detail in the discussion section.
-
-
-
-
 
 
 
@@ -645,24 +651,44 @@ In another example, Tehillah's concept of a level that eschews challenge and off
 These novel concepts may have emerged spontaneously or have a source in part from participants' funds of gaming knowledge. In either case, once a concept like that of safe zone enters the linguistic and coding repertoire of this community of game makers, it facilitates propagation based on the interest of other participants.
 
 
-<!-- #### Interventions to facilitate emergent social and cultural activities in evolving idioculture -->
+#### Emergent social and cultural activities in evolving idioculture
 
-The process of emergence of novel repertoires which drew on GDP concepts, and wider, existing practice aligned with the motivations of this study. Therefore to try to support their development I introduced some additional social missions described in Chapter 5 and described in more detail in Appendix.makertypes. Paralleling Bartle's player types [@schneider_analysis_2016], the concept of maker types addressed observations of the varied sub-goals which emerged in playtesting. Recalling the barriers to participation explored in Chapter 2, my rationale for exploring maker types with participants was to promote awareness of pluralistic programming process [@papert_epistemological_1990], and a message that when you are learning something novel and challenging, there is value in incorporating your existing working preferences and techniques in the process. Rather than proposing that these styles make up a rigid typology to be replicated in other settings, instead, in line with Gutierrez and Rogoff [-@gutierrez_cultural_2003, p.20] , that the process of co-constructing understanding and communication about learning styles can "support the changing nature of participation and the forms of assistance provided in joint activity."
+**Community concepts and norming behaviour**
 
+MOVE BACK TO CHAPTER 7 IF NO SPACE?
 
-<!-- Begin discussion with reference to [@gutierrez_cultural_2003] on "Helping Students Learn: Having Styles or Participating in Practices", and a careful statement to avoid over generalisation here, but at the same time recognise the value of emerging practices and styles. -->
-
-
-<!-- In this chapter's discussion this wider focus on cultural elements is addressed via an exploration of flexible approaches to the design practice. -->
-
-<!-- And following that the link to inclusive linguistic element of the pedagogy which can be aligned with other inclusive practices of UDL. In this study the focus is less on aspects of ethnical cultural elements and more the those related to neurodiversity.
-IS THERE SPACE FOR THIS here - IF SO WHERE? - NEXT CHAPTER PROBABLY  -->
+NOTE THERE IS SOMETHING HERE ABOUT ME STEPPING BACK AND LETTING THE COMMUNITY EVOLVE.
 
 
-Thus, similar to the way tools were modified to provide new affordances for participants, in P3 I began to encourage these processes by introducing a drama process incorporating _social side-missions_ to augment the affordances of the playtesting environment. The process of exploring identity via side missions in this way surfaced the cheekiness of some young people and the pleasure they took in demonstrating their playful mischievousness. Many of the social missions encouraged activity outside of strictly productive design activities: for example, the lively discussion about game playing in response to the mission to _find out the favourite games of 3 other people_. In observations of video data, I was struck by the high degree of flexibility and variation present in participant behaviour. In the following section I begin an analysis of other emerging characteristics.
+
+The use of GDPs in design and in community interaction became integrated with other home and technical practices into an idioculture [@cole_design-based_2016]: a local, non-geographical, non-demographic community where culture emerges via valued behaviours [@lecusay_telementoring_2015].
 
 
-<!-- This section has explored the use of GDPs within strategies and processes that occur at a community level. -->
+For many younger participants, playful interactions can be seen a a leading activity, or a primary motivation.
+The process of playtesting often served as a facilitative medium for a shared language and idioculture to emerge and, as such, became a significant part of the pedagogy of the learning design.
+
+The playful elements of the revised process with greater playtesting time helped remove system tensions and moreover introduced system congruencies.
+
+
+Ed gives a more technical explanation from  involving the naming of the variable _jump speed_.
+
+Other children come and play the game but only for less than a minute before leaving. Towards the end of the playtesting process, as one child leaves, Molly comments "It's so frustrating." This suggests an evolving understanding that her game is frustrating to players rather than pleasantly challenging.
+
+The indirect norming behaviours described in appendix 5.Norm.x mirror observations seen in the work of Rogoff and colleagues [@rogoff_cultural_2003] on learning in  community settings.
+
+There is an apparent tension in play here between encouraging individual agency of expression within the game and an evolving community tendency to norm peoples games to be more _playable_, specifically that player movement should conforming to wider expectations.
+
+What we can draw from the data at this stage is that playtesing provides many leverage points to facilitating learner agency and discuss the limits of designs. IN addition, playtesting is a process that allows participants to demonstrate informed criticality as a player and guide the creations of peers via gameplay feedback.
+
+This process is an example of an emerging process where cultural concepts are mutually constituted by all actors involved in the game making activity system. While the concepts of hardness and challenge that emerge and not concrete examples of GDPS, they are the results of changed GDPs. The next chapter explores similar data on the use of GDP related concepts by participants and the resultant potential impact on participant agency.
+
+**A tension in use of norming practices and participant choice?**
+However, as a seeming counterpoint to this growing agency is the norming effects of concepts that gain community currency in playtesting. The repeated attempts by participants to make the jumping mechanic of Molly less frustrating can be seen as a potential drag on the agency or autonomy of Molly as a designer. However this may be a false dichotomy. Such norming practices can be seen from a different perspective according to Rogoff, as a productive nudge to get real.
+ IS THIS EXPLORED IN THE NEXT CHAPTER?
+
+This chapter has demonstrated that these behaviours could be undertaken in many ways, including those requiring little commitment. For example, even if participants only noticed the use of GDPs and used approximate terminology to comment on them during playtesting, this form of activity can be seen as legitimate peripheral participation (EXPLAIN?) [@lave_situated_1991; @guzdial_imagineering_2006], and thus a helpful practice contributing to the emerging ecosystem of the learning community.
+
+
 
 ## Discussion
 
@@ -691,60 +717,22 @@ The examples in this chapter show the importance of GDPs as a lingua franca, as 
 
 Illustration 6.x - Diverse mediational strategies and complex object of activity
 
-MOVE NEXT CHAPTER
-For many younger participants, playful interactions can be seen a a leading activity, or a primary motivation.
-The process of playtesting often served as a facilitative medium for a shared language and idioculture to emerge and, as such, became a significant part of the pedagogy of the learning design.
 
-The playful elements of the revised process with greater playtesting time helped remove system tensions and moreover introduced system congruencies.
-
-The use of GDPs in design and in community interaction became integrated with other home and technical practices into an idioculture [@cole_design-based_2016]: a local, non-geographical, non-demographic community where culture emerges via valued behaviours [@lecusay_telementoring_2015].
-
-
-
-This chapter has demonstrated that these behaviours could be undertaken in many ways, including those requiring little commitment. For example, even if participants only noticed the use of GDPs and used approximate terminology to comment on them during playtesting, this form of activity can be seen as legitimate peripheral participation (EXPLAIN?) [@lave_situated_1991; @guzdial_imagineering_2006], and thus a helpful practice contributing to the emerging ecosystem of the learning community.
-
-
-Given the complexity of the object being worked on in this research, in particular in terms of goal formation and motivation, it is of value to return to existing research on CGD&P to evaluate the potential for this research to contribute to the field.
-
-One candidate to extend is the varied concepts of fluency in the field.
-
-
-
-#### Community concepts and norming behaviour emerging during playtesting - MOVED HERE INTEGRATE UP - LINK WITH DIAGRAMS AS RULES / NORMS AND EMERGENCE OF EXPANDED OBJECTS
-
-MOVE BACK TO CHAPTER 6 IF SPACE?
-
-NOTE THERE IS SOMETHING HERE ABOUT ME STEPPING BACK AND LETTING THE COMMUNITY EVOLVE.
-
-Ed gives a more technical explanation from  involving the naming of the variable _jump speed_.
-
-Other children come and play the game but only for less than a minute before leaving. Towards the end of the playtesting process, as one child leaves, Molly comments "It's so frustrating." This suggests an evolving understanding that her game is frustrating to players rather than pleasantly challenging.
-
-The indirect norming behaviours described in appendix 5.Norm.x mirror observations seen in the work of Rogoff and colleagues [@rogoff_cultural_2003] on learning in  community settings.
-
-There is an apparent tension in play here between encouraging individual agency of expression within the game and an evolving community tendency to norm peoples games to be more _playable_, specifically that player movement should conforming to wider expectations.
-
-What we can draw from the data at this stage is that playtesing provides many leverage points to facilitating learner agency and discuss the limits of designs. IN addition, playtesting is a process that allows participants to demonstrate informed criticality as a player and guide the creations of peers via gameplay feedback.
-
-This process is an example of an emerging process where cultural concepts are mutually constituted by all actors involved in the game making activity system. While the concepts of hardness and challenge that emerge and not concrete examples of GDPS, they are the results of changed GDPs. The next chapter explores similar data on the use of GDP related concepts by participants and the resultant potential impact on participant agency.
-
-**A tension in use of norming practices and participant choice?**
-However, as a seeming counterpoint to this growing agency is the norming effects of concepts that gain community currency in playtesting. The repeated attempts by participants to make the jumping mechanic of Molly less frustrating can be seen as a potential drag on the agency or autonomy of Molly as a designer. However this may be a false dichotomy. Such norming practices can be seen from a different perspective according to Rogoff, as a productive nudge to get real.
- IS THIS EXPLORED IN THE NEXT CHAPTER?
-
-<!-- In line with Sannino [@sannino_transformative_2022], this study frames such innovation within CHAT as transformational agency, a discussion of which forms a significant part of the following chapter. -->
-
-
-<!-- By way of contrast, Gutiérrez's [@gutierrez_developing_2008] focus on the movement of identity between settings' repertoires of practice draws on the importance of a wider cultural focus of the learning process, or the “cultural mediation of thinking” (Moll, 1998), cited in [@digiacomo_seven_2017] p.44. Gutiérrez sees a role for facilitators to facilitate this via learning design. In this chapter, the last section examining activity on the cultural plane exposed elements of transfer between different activity systems, supporting Gutiérrez's [@gutierrez_developing_2008] perspective regarding the importance of transcending borders and linguistic practices between sites of learning. -->
-
-<!-- Several of the observations in vignettes described above, especially those involving interpersonal guided participation, detail the interweaving of novel concepts and practices with existing repertoires. An example being the use of visual prototyping explored above and in more detail in appendix.prototyping. -->
-
-### Observations on emerging (design practices) - REFRAME AS FLUENCY ACTIVITY?
+### Expanded object in terms of motivation - fluency towards agency
 
 <!-- NOTE To restructure. -->
 
+Given the complexity of the object being worked on in this research, , it is of value to return to existing research on CGD&Pn terms of goal formation and motivation in a way which invites discussion on how best to conceptualise the flexible design practices were present above data.
 
-The cultural section above identified the development and the value of flexible design processes in a way which invites discussion on how best to conceptualise these flexible approaches.
+SPACE ABOVE - THE SUMMARISE?
+Younger participants in particular developed impressively fluid practice demonstrating extremely rapids shifts between code editing, game testing, authoring assets in online tools and migrating files often while talking with peers. Older participants also showed rapid, responsive creativity. Clive quickly incorporated a boost to player health after a level after being given feedback during playtesting. In exploring sound making software Ed and Mark start a process of tinkering and messing about with the capability of the tools which spurs creativity. The joint jamming created two different soundtracks. This sparks a new proposal to incorporate different soundtracks for different levels. Pairs often adopted a similar spirit of improvisation. For example parent Dan makes a suggestion - "Use paper to design?" - to which Toby replies "I'm just going with it."
+
+Flow theory in my guiding motivations in terms of participant experience [@perttula_flow_2017]. As a facilitator, my design decisions were often guided by the desire to not detract from participant experience of flow, and thus their coding fluency and engagement in and identification with the overall game-making process.
+
+
+MOVE?
+In Chapter 2 the value of a learning design using computational thinking patterns was explore through the concept of proximal flow. A synthesis of flow theory with socio-cultural concerns of learning context. A gap in this research however was more specificity in detail of how patterns could help the process of maintaining flow beyond instrumental, albeit just-in-time instruction.  The lack of user-led process due to the linear nature of the instructions provided to implement also limits the experience of flow in terms of lack of possibilities for social identity expression [@mao_optimal_2016].  
+
 Fluency is one candidate.
 
 
@@ -753,10 +741,7 @@ What can be observed about the interaction of participants use of GDPs and the e
 Chapter 2 introduced varied forms of fluency
 
 MOVE OR COMPRESS?
-Firstly, it is notable to make the flow theory in my guiding motivations in terms of participant experience [@perttula_flow_2017]. As a facilitator, my design decisions were often guided by the desire to not detract from participant experience of flow, and thus their coding fluency and engagement in and identification with the overall game-making process.
 
-
-In Chapter 2 the value of a learning design using computational thinking patterns was explore through the concept of proximal flow. A synthesis of flow theory with socio-cultural concerns of learning context. A gap in this research however was more specificity in detail of how patterns could help the process of maintaining flow beyond instrumental, albeit just-in-time instruction.  The lack of user-led process due to the linear nature of the instructions provided to implement also limits the experience of flow in terms of lack of possibilities for social identity expression [@mao_optimal_2016].  
 
 <!-- The data of this chapter develops the scope of this line of research with more specific using framed using socio-cultural analysis and concepts. -->
 
@@ -767,22 +752,8 @@ The limitations here are on detail on how to enact identity formation via specif
 
 As a step towards this development we can identify the characteristics of fluency in the mediational uses of GDPs outlined in this chapter, identifying techniques used to design for those characteristics, and to surface additional socio-cultural concepts useful for an enriched understanding of processes as play.  
 
-**Identifying characteristics of fluency**
-
-The following summary is offered as an immediate analysis using the frame of computational fluency to ground further exploration in Chapter 7. In summative terms fluency can be seen in the mediational strategies outlined in this chapter in the following ways.
-
-Perhaps via a table.
-
-- via instrumental coding competency needed to make changes effectively with or without supporting documentation
-- from a as a read / write perspective, learners should be able to write as well as read programs as a form of empowerment [@resnick2002rethinking]
-- via expression of creative or significant ideas in constructing digital products   
-- as a means of identity formation in groups and collectives [@gee_chapter_2000]
-- Via  more general (non-coding) participation in communities, i.e. well informed feedback  on other projects.  
 
 
-<!-- NOTE CHALLENGE HERE HOW TO EXPLORE IN PART HERE USEFULLY AND MAKE ABRIDGE TO THE NEXT SECTION. -->
-
-<!-- NOTE - IS THIS IN THE NEXT CHAPTER? is this just in relation to GDPs? -->
 **Discussion on designing for fluency**
 
 NOTE THIS SHOULD BE LIMITED AS EXPLORED LATER TOO. FLUENCY NOT AGENCY / MAKE A DISTINCTION/ - OR PERHAPS REMOVE.
@@ -790,10 +761,55 @@ NOTE THIS SHOULD BE LIMITED AS EXPLORED LATER TOO. FLUENCY NOT AGENCY / MAKE A D
 The work of the constructionist school is rich in a legacy of designing for fluency, notably including: software microworlds, affordance rich tools sets facilitating open-ended experimentations, accessible multi-media authoring software and community of Scratch. One idea which while present in part in online community of Scratch is that of constructopedia, an evolving resource of inspirational design elements, and accompanying instructions.
 
 
-The collection of GDPs with linked documentation fulfils this role.    
+**Identifying characteristics of fluency**
 
-To extend the concepts of designing for fluidity, it is of value to explore the characteristics of the emerging design practices and potential strategies to support them. These include: a flexible approach to design stages, varied forms of incorporation of external repertoires, and a tension between choice of participant pathway and creative restrictions in the learning design.
 
+In summative terms fluency can be seen in the mediational strategies outlined in this chapter in the following ways.
+
+- via instrumental coding competency needed to make changes effectively with or without supporting documentation
+- from a as a read / write perspective, learners should be able to write as well as read programs as a form of empowerment [@resnick2002rethinking]
+- via expression of creative or significant ideas in constructing digital products   
+
+
+<!-- - as a means of identity formation in groups and collectives [@gee_chapter_2000]
+- Via  more general (non-coding) participation in communities, i.e. well informed feedback  on other projects.   -->
+
+
+<!-- NOTE CHALLENGE HERE HOW TO EXPLORE IN PART HERE USEFULLY AND MAKE ABRIDGE TO THE NEXT SECTION. -->
+
+<!-- NOTE - IS THIS IN THE NEXT CHAPTER? is this just in relation to GDPs? -->
+
+
+
+<!-- The collection of GDPs with linked documentation fulfils this role.    
+
+To extend the concepts of designing for fluidity, it is of value to explore the characteristics of the emerging design practices and potential strategies to support them. These include: a flexible approach to design stages, varied forms of incorporation of external repertoires, and a tension between choice of participant pathway and creative restrictions in the learning design. -->
+
+
+
+
+
+## Conclusion
+
+On a theoretical plane, this chapter has outlined the evolving use of GDPs as a meditational strategy to develop coding repertoires that are often shared. CHAT frames diverse use of shared resources and concepts, in this case GDPs, as meditational strategies.
+
+
+On a cultural plane, using GDPs can aid the propagation of technical and social processes game making practices within an emerging community of learners. GDPs served both researchers and participants by _providing a common language_ to clarify first learner expression and researcher's analysis of gameplay experience.
+
+The observations of this chapter show the diversity and flexibility of uses of GDP as an mediational tool.
+The next chapter builds on this to propose the potential of GDPs as a relatable navigational framework, occupying a the space between too concrete to be repeated and too theoretical to be grasped by novice game makers.
+
+
+The findings identified a complex object with a diversity of motivation which pose challenges in communicating in simple terms in terms of what characteristics we are designing learning environments to develop. The candidates of proximal flow and computational fluency were explored in relation to existing research and gaps were identified in there coverage of the importance of learning agency and identify formation.
+
+As such in the next chapter, this gap is addressed via the socio-cultural framing of learning.
+
+<!-- In line with Sannino [@sannino_transformative_2022], this study frames such innovation within CHAT as transformational agency, a discussion of which forms a significant part of the following chapter. -->
+
+
+<!-- By way of contrast, Gutiérrez's [@gutierrez_developing_2008] focus on the movement of identity between settings' repertoires of practice draws on the importance of a wider cultural focus of the learning process, or the “cultural mediation of thinking” (Moll, 1998), cited in [@digiacomo_seven_2017] p.44. Gutiérrez sees a role for facilitators to facilitate this via learning design. In this chapter, the last section examining activity on the cultural plane exposed elements of transfer between different activity systems, supporting Gutiérrez's [@gutierrez_developing_2008] perspective regarding the importance of transcending borders and linguistic practices between sites of learning. -->
+
+<!-- Several of the observations in vignettes described above, especially those involving interpersonal guided participation, detail the interweaving of novel concepts and practices with existing repertoires. An example being the use of visual prototyping explored above and in more detail in appendix.prototyping. -->
 
 
 
@@ -900,20 +916,7 @@ For example, the use of CT concepts in a framework, listed as part of the initia
 
 
 
-## Conclusion
 
-On a theoretical plane, this chapter has outlined the evolving use of GDPs as a meditational strategy to develop coding repertoires that are often shared. CHAT frames diverse use of shared resources and concepts, in this case GDPs, as meditational strategies.
-
-
-On a cultural plane, using GDPs can aid the propagation of technical and social processes game making practices within an emerging community of learners. GDPs served both researchers and participants by _providing a common language_ to clarify first learner expression and researcher's analysis of gameplay experience.
-
-The observations of this chapter show the diversity and flexibility of uses of GDP as an mediational tool.
-The next chapter builds on this to propose the potential of GDPs as a relatable navigational framework, occupying a the space between too concrete to be repeated and too theoretical to be grasped by novice game makers.
-
-
-The findings identified a complex object with a diversity of motivation which pose challenges in communicating in simple terms in terms of what characteristics we are designing learning environments to develop. The candidates of proximal flow and computational fluency were explored in relation to existing research and gaps were identified in there coverage of the importance of learning agency and identify formation.
-
-As such in the next chapter, this gap is addressed via the socio-cultural framing of learning.
 
 <!-- This is done in several ways?
 
