--- a/_posts/thesis_chapters/tocs/2025-3-6-Gdps.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2025-3-6-Gdps.md_toc.md
@@ -29,22 +29,15 @@
             interest](#gdps-can-facilitate-the-use-of-wider-funds-of-knowledge-and-interest)
         -   [Evolution and propagation of GDPs concepts during
             playtesting](#evolution-and-propagation-of-gdps-concepts-during-playtesting)
+            -   [Emergent social and cultural activities in evolving
+                idioculture](#emergent-social-and-cultural-activities-in-evolving-idioculture)
     -   [Discussion](#discussion)
-        -   [Discussion on emerging cultural practices /
-            idioculture](#discussion-on-emerging-cultural-practices-idioculture)
-            -   [Playful idioculture](#playful-idioculture)
-            -   [Game maker types](#game-maker-types)
         -   [Addressing the use of GDPs in relation to theoretical
-            understandings of processes of mediation (and incorporation
-            in repertoires of
-            practice)](#addressing-the-use-of-gdps-in-relation-to-theoretical-understandings-of-processes-of-mediation-and-incorporation-in-repertoires-of-practice)
-            -   [Community concepts and norming behaviour emerging
-                during playtesting - MOVED HERE INTEGRATE UP - LINK WITH
-                DIAGRAMS AS RULES / NORMS AND EMERGENCE OF EXPANDED
-                OBJECTS](#community-concepts-and-norming-behaviour-emerging-during-playtesting---moved-here-integrate-up---link-with-diagrams-as-rules-norms-and-emergence-of-expanded-objects)
-        -   [Observations on emerging (design practices) - REFRAME AS
-            FLUENCY
-            ACTIVITY?](#observations-on-emerging-design-practices---reframe-as-fluency-activity)
+            understandings of processes of mediation and expanded
+            objects of
+            activity](#addressing-the-use-of-gdps-in-relation-to-theoretical-understandings-of-processes-of-mediation-and-expanded-objects-of-activity)
+        -   [Expanded object in terms of motivation - fluency towards
+            agency](#expanded-object-in-terms-of-motivation---fluency-towards-agency)
     -   [Conclusion](#conclusion)
     -   [MOVED FROM INTRODUCTION](#moved-from-introduction)
         -   [MOVED FROM GUIDED
@@ -68,4 +61,3 @@
                 NOW?](#move-later-just-a-signpost-to-later---park-for-now)
         -   [Implications for practitioners - MOVE
             LATER?](#implications-for-practitioners---move-later)
-            -   [A thought on reflection](#a-thought-on-reflection)
